<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/border"
    tools:context=".manage.RegisterActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="69dp">

        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/prompt_email"/>
      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal" />

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="69dp">
        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"/>
      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal" />

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="69dp">
        <EditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"/>
      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal" />


      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="69dp">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerGender"
            android:entries="@array/gender"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown" />
      </LinearLayout>


      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="69dp">
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerAge"
            android:entries="@array/age"
            android:layout_gravity="center_horizontal" />
      </LinearLayout>

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="69dp">

        <EditText
            android:id="@+id/tel"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/telephone"/>
      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal" />

      <Button
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:onClick="register"
          android:text="@string/register"/>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
