<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="1"
    tools:context=".manage.AditionalInfo">

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description_point"
            android:id="@+id/textView"
            android:layout_marginTop="65dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextDescAD"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/age"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextAge"
            android:layout_gravity="center_horizontal"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gender"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextGender"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hair"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextHair"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/skin"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextSkin"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tel"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="89dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextTel"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26"
            android:editable="false" />
    </LinearLayout>


</LinearLayout>
