<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".manage.LoginActivity"
    android:weightSum="1">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="bottom|center" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center|center_horizontal"
                android:layout_weight="0.12">
                <EditText
                    android:id="@+id/email"
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="306dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center|center_horizontal"
                android:layout_weight="0.06">
                <EditText
                    android:id="@+id/password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textColor="#c5292a"
                    android:textAlignment="center"
                    android:shadowColor="#9FA89E"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="352dp"
                android:layout_height="169dp"
                android:weightSum="1"
                android:clickable="true"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="155dp"
                    android:layout_height="170dp"
                    android:id="@+id/idBotao"
                    android:background="@drawable/botao"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp"
                    android:clickable="true"
                    android:contentDescription="@string/action_sign_in" />
            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="69dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/sendbt"
                    android:text="@string/register"
                    android:textColor="#c5292a"
                    android:textSize="26sp"
                    android:layout_width="227dp"
                    android:layout_height="60dp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#9FA89E"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2"
                    android:layout_gravity="center_horizontal"
                    android:onClick="register"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:text="@string/login_ex_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textLogin"
                android:layout_weight="0.12"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
